<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.pirai</groupId>
	<artifactId>internaltools</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>internaltools</name>
	<description>intenaltools App</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<jjwt.version>0.9.1</jjwt.version>
		<lombok.version>1.18.12</lombok.version>
		<mapstruct.version>1.2.0.Final</mapstruct.version>
		<itext.version>7.1.16</itext.version>
		
		<docker.image.prefix>registry.gitlab.com/pirai/internal-tools</docker.image.prefix>
		<docker.image.name>internaltools</docker.image.name>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-envers</artifactId>
		</dependency>
		<!-- For Working with Json Web Tokens (JWT) -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>

		<!-- For Java 8 Date/Time Support -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.0</version>
		</dependency>
		<dependency>
	        <groupId>commons-io</groupId>
	        <artifactId>commons-io</artifactId>
	        <version>2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>2.9.2</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.9.2</version>
		</dependency>

		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>1.30.9</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.social</groupId>
			<artifactId>spring-social-facebook</artifactId>
			<version>2.0.3.RELEASE</version>
		</dependency>

		<!-- AWS SNS SDK -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.11.793</version>
		</dependency>

		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.firebase</groupId>
			<artifactId>firebase-admin</artifactId>
			<version>6.8.1</version>
		</dependency>
		
		<dependency>
		  <groupId>com.stripe</groupId>
		  <artifactId>stripe-java</artifactId>
		  <version>19.32.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
		    <version>2.3.1.RELEASE</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.bitbucket.b_c/jose4j -->
		<dependency>
		    <groupId>org.bitbucket.b_c</groupId>
		    <artifactId>jose4j</artifactId>
		    <version>0.5.0</version>
		</dependency>
		
	    <dependency>
	        <groupId>org.bouncycastle</groupId>
	        <artifactId>bcpkix-jdk15on</artifactId>
	        <version>1.63</version>
	    </dependency>
	
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-api</artifactId>
	        <version>0.10.7</version>
	    </dependency>
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-impl</artifactId>
	        <version>0.10.7</version>
	        <scope>runtime</scope>
	    </dependency>
	    <dependency>
	        <groupId>io.jsonwebtoken</groupId>
	        <artifactId>jjwt-jackson</artifactId>
	        <version>0.10.7</version>
	        <scope>runtime</scope>
	    </dependency>
	    <dependency>
	        <groupId>com.mashape.unirest</groupId>
	        <artifactId>unirest-java</artifactId>
	        <version>1.4.9</version>
	    </dependency>
	    <dependency>
	        <groupId>org.json</groupId>
	        <artifactId>json</artifactId>
	        <version>20140107</version>
	    </dependency>
	    
		<dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>itext7-core</artifactId>
	        <version>${itext.version}</version>
	        <type>pom</type>
	    </dependency>
	    
	    <dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>kernel</artifactId>
	        <version>${itext.version}</version>
	    </dependency>

	    <dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>io</artifactId>
	        <version>${itext.version}</version>
	    </dependency>
	    
	    <dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>layout</artifactId>
	        <version>${itext.version}</version>
	    </dependency>
		
		<dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>pdfa</artifactId>
	        <version>${itext.version}</version>
	    </dependency>
	    
	    <dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>3.17</version>
		</dependency>
		
		<dependency>
	        <groupId>org.apache.poi</groupId>
	        <artifactId>poi-ooxml</artifactId>
	        <version>3.13-beta1</version>
	    </dependency>
	    
	    <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
            <version>1.0.6</version>
        </dependency>
	    		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.31.0</version>
				<configuration>
					<dockerHost>unix:///var/run/docker.sock</dockerHost>
					<verbose>true</verbose>
					<images>
						<image>
							<name>${docker.image.prefix}/${docker.image.name}</name>
							<build>
								<dockerFileDir>${project.basedir}/</dockerFileDir>
								<assembly>
									<descriptorRef>artifact</descriptorRef>
								</assembly>
								<tags>
									<tag>latest</tag>
									<tag>${project.version}</tag>
								</tags>
							</build>
							<run>
								<ports>
									<port>8084:8084</port>
								</ports>
							</run>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
